# sq2_ccv_description

./: .gitignore  CMakeLists.txt  README.md  build_docker.sh  docker-compose.yml  package.xml  run_nvidia_docker.sh  setup.sh
config/: controller.yaml  urdf.rviz
docker/: Dockerfile
launch/: control.launch  cube.launch  display.launch  empty.launch.py  gazebo.launch  gazebo.launch.py
meshes/STL/: camera.stl
models/sq2_ccv/: model.config  model.sdf
robot/: sq2_ccv.urdf
urdf/: cube.urdf
urdf/base/: base.urdf.xacro  base2body.urdf.xacro  battery_box.urdf.xacro  casters_pitch.urdf.xacro  lidar_pillar.urdf.xacro  pitch2shaft.urdf.xacro  upper_body.urdf.xacro
urdf/bumper/: bumper.urdf.xacro
urdf/caster/: caster.urdf.xacro
urdf/sensors/: camera.urdf.xacro  lrf.urdf.xacro  wide_fov_3d_lidar.urdf.xacro
urdf/steering/: steering.urdf.xacro
urdf/wheel/: wheel.urdf.xacro
worlds/: empty.world  empty_with_ccv.world  experiment.world  experiment_tilted_plane.world  human.world  people_dolly_city.world  people_dolly_city_local.world
